[package]
name = "iroh-tunnel"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
base64 = "=0.22.1"
capnp = "=0.18.13"
capnp-rpc = "=0.18.0"
futures = "=0.3.32"
futures-util = { version = "=0.3.32", features = ["io"] }
iroh = "=0.96.1"
serde_json = "=1.0.145"
tokio = { version = "=1.50.0", features = ["net", "rt"] }
tokio-util = { version = "=0.7.18", features = ["compat"] }

[build-dependencies]
capnpc = "=0.18.1"
