[package]
name = "iroh-tunnel"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
base64 = "=0.22.1"
capnp = "=0.25.0"
capnp-rpc = "=0.25.0"
futures = "=0.3.32"
futures-util = { version = "=0.3.32", features = ["io"] }
iroh = { version = "=0.97.0", features = ["unstable-custom-transports"] }
iroh-base = "=0.97.0"
n0-watcher = "=0.6.1"
noq-udp = "=0.9.0"
quinn = "=0.11.9"
quinn-udp = "=0.5.14"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.50.0", features = ["net", "rt"] }
tokio-util = { version = "=0.7.18", features = ["compat"] }

[build-dependencies]
capnpc = "=0.25.0"
